fix: corrige alguns detalhes nos endpoints
